// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PolygonToolOverlay > closing polygon behavior > does not render closing line when not snapping to first point 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <polyline
      fill="none"
      points="100,100 200,100 200,200"
      stroke="var(--color-gray-700)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <line
      stroke="var(--color-gray-800)"
      stroke-dasharray="10 10"
      stroke-width="2"
      x1="200"
      x2="300"
      y1="200"
      y2="300"
    />
    <circle
      cx="100"
      cy="100"
      fill="var(--color-blue-600)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="200"
      cy="100"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="200"
      cy="200"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="300"
      cy="300"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-800)"
      stroke-width="1"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > closing polygon behavior > renders closing line when snapping to first point with invalid closure 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <polyline
      fill="none"
      points="100,100 200,100 200,200"
      stroke="var(--color-gray-700)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <line
      stroke="var(--color-red-600)"
      stroke-dasharray="10 10"
      stroke-width="2"
      x1="200"
      x2="100"
      y1="200"
      y2="100"
    />
    <circle
      cx="100"
      cy="100"
      fill="var(--color-blue-600)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="200"
      cy="100"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="200"
      cy="200"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="0"
      cy="0"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-800)"
      stroke-width="1"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > closing polygon behavior > renders closing line when snapping to first point with valid closure 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <polyline
      fill="none"
      points="100,100 200,100 200,200"
      stroke="var(--color-gray-700)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <line
      stroke="var(--color-green-600)"
      stroke-dasharray="10 10"
      stroke-width="2"
      x1="200"
      x2="100"
      y1="200"
      y2="100"
    />
    <circle
      cx="100"
      cy="100"
      fill="var(--color-blue-600)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="200"
      cy="100"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="200"
      cy="200"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="0"
      cy="0"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-800)"
      stroke-width="1"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > edge cases > handles empty points array gracefully 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <circle
      cx="0"
      cy="0"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-800)"
      stroke-width="1"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > edge cases > handles exactly two points (minimum for line rendering) 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <polyline
      fill="none"
      points="0,0 100,100"
      stroke="var(--color-gray-700)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <line
      stroke="var(--color-gray-800)"
      stroke-dasharray="10 10"
      stroke-width="2"
      x1="100"
      x2="200"
      y1="100"
      y2="0"
    />
    <circle
      cx="0"
      cy="0"
      fill="var(--color-blue-600)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="100"
      cy="100"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="200"
      cy="0"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-800)"
      stroke-width="1"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > rendering with multiple points > differentiates first point styling from other points 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <polyline
      fill="none"
      points="0,0 100,0 100,100 0,100"
      stroke="var(--color-gray-700)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <line
      stroke="var(--color-gray-800)"
      stroke-dasharray="10 10"
      stroke-width="2"
      x1="0"
      x2="50"
      y1="100"
      y2="50"
    />
    <circle
      cx="0"
      cy="0"
      fill="var(--color-blue-600)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="100"
      cy="0"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="100"
      cy="100"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="0"
      cy="100"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="50"
      cy="50"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-800)"
      stroke-width="1"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > rendering with multiple points > renders polygon with connected lines and points 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <polyline
      fill="none"
      points="100,100 200,100 200,200"
      stroke="var(--color-gray-700)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <line
      stroke="var(--color-gray-800)"
      stroke-dasharray="10 10"
      stroke-width="2"
      x1="200"
      x2="100"
      y1="200"
      y2="200"
    />
    <circle
      cx="100"
      cy="100"
      fill="var(--color-blue-600)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="200"
      cy="100"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="200"
      cy="200"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="100"
      cy="200"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-800)"
      stroke-width="1"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > rendering with no points > renders only snap point when no polygon points exist 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <circle
      cx="100"
      cy="200"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-800)"
      stroke-width="1"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > rendering with single point > renders first point and snap point 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <line
      stroke="var(--color-gray-800)"
      stroke-dasharray="10 10"
      stroke-width="2"
      x1="100"
      x2="200"
      y1="100"
      y2="200"
    />
    <circle
      cx="100"
      cy="100"
      fill="var(--color-blue-600)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="200"
      cy="200"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-800)"
      stroke-width="1"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > rendering with single point > renders line to pointer position with invalid styling 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <line
      stroke="var(--color-red-600)"
      stroke-dasharray="10 10"
      stroke-width="2"
      x1="50"
      x2="150"
      y1="50"
      y2="150"
    />
    <circle
      cx="50"
      cy="50"
      fill="var(--color-blue-600)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="150"
      cy="150"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-800)"
      stroke-width="1"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > rendering with single point > renders line to pointer position with valid styling 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <line
      stroke="var(--color-gray-800)"
      stroke-dasharray="10 10"
      stroke-width="2"
      x1="50"
      x2="150"
      y1="50"
      y2="150"
    />
    <circle
      cx="50"
      cy="50"
      fill="var(--color-blue-600)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="150"
      cy="150"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-800)"
      stroke-width="1"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > snapping behavior > renders snap lines when snap result has lines 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <g
      pointer-events="none"
    >
      <line
        opacity="0.5"
        stroke="var(--color-green-700)"
        stroke-width="2"
        x1="-1500"
        x2="1700"
        y1="100"
        y2="100"
      />
      <line
        opacity="0.5"
        stroke="var(--color-red-700)"
        stroke-width="2"
        x1="200"
        x2="200"
        y1="-1400"
        y2="1800"
      />
    </g>
    <line
      stroke="var(--color-gray-800)"
      stroke-dasharray="10 10"
      stroke-width="2"
      x1="50"
      x2="145"
      y1="50"
      y2="145"
    />
    <circle
      cx="50"
      cy="50"
      fill="var(--color-blue-600)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="145"
      cy="145"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-800)"
      stroke-width="1"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > snapping behavior > renders snap position when snap result exists 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <line
      stroke="var(--color-gray-800)"
      stroke-dasharray="10 10"
      stroke-width="2"
      x1="100"
      x2="120"
      y1="100"
      y2="120"
    />
    <circle
      cx="100"
      cy="100"
      fill="var(--color-blue-600)"
      r="5"
      stroke="var(--color-gray-100)"
      stroke-width="1"
    />
    <circle
      cx="120"
      cy="120"
      fill="var(--color-gray-800)"
      r="5"
      stroke="var(--color-gray-800)"
      stroke-width="1"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > zoom responsiveness > adjusts line extension based on stage dimensions 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <g
      pointer-events="none"
    >
      <line
        opacity="0.5"
        stroke="var(--color-green-700)"
        stroke-width="1"
        x1="-1500"
        x2="1700"
        y1="100"
        y2="100"
      />
    </g>
    <circle
      cx="0"
      cy="0"
      fill="var(--color-gray-800)"
      r="2.5"
      stroke="var(--color-gray-800)"
      stroke-width="0.5"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > zoom responsiveness > scales elements appropriately at high zoom 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <polyline
      fill="none"
      points="100,100 200,100"
      stroke="var(--color-gray-700)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1"
    />
    <line
      stroke="var(--color-gray-800)"
      stroke-dasharray="2.5 2.5"
      stroke-width="1"
      x1="200"
      x2="200"
      y1="100"
      y2="200"
    />
    <circle
      cx="100"
      cy="100"
      fill="var(--color-blue-600)"
      r="1.25"
      stroke="var(--color-gray-100)"
      stroke-width="0.25"
    />
    <circle
      cx="200"
      cy="100"
      fill="var(--color-gray-800)"
      r="1.25"
      stroke="var(--color-gray-100)"
      stroke-width="0.25"
    />
    <circle
      cx="200"
      cy="200"
      fill="var(--color-gray-800)"
      r="1.25"
      stroke="var(--color-gray-800)"
      stroke-width="0.25"
    />
  </g>
</div>
`;

exports[`PolygonToolOverlay > zoom responsiveness > scales elements appropriately at low zoom 1`] = `
<div>
  <g
    pointer-events="none"
  >
    <polyline
      fill="none"
      points="100,100 200,100"
      stroke="var(--color-gray-700)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="8"
    />
    <line
      stroke="var(--color-gray-800)"
      stroke-dasharray="40 40"
      stroke-width="8"
      x1="200"
      x2="200"
      y1="100"
      y2="200"
    />
    <circle
      cx="100"
      cy="100"
      fill="var(--color-blue-600)"
      r="20"
      stroke="var(--color-gray-100)"
      stroke-width="4"
    />
    <circle
      cx="200"
      cy="100"
      fill="var(--color-gray-800)"
      r="20"
      stroke="var(--color-gray-100)"
      stroke-width="4"
    />
    <circle
      cx="200"
      cy="200"
      fill="var(--color-gray-800)"
      r="20"
      stroke="var(--color-gray-800)"
      stroke-width="4"
    />
  </g>
</div>
`;
